--- a/Project1.dproj
+++ b/Project1.dproj
@@ -167,6 +167,10 @@
             <Form>Form23</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Unit24.pas">
+            <Form>Form24</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
